// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object 1`] = `
{
  "objectInfo": {
    "description": "",
    "fieldInfoList": [
      {
        "description": "",
        "id": "test-1-object-test-1-object-field",
        "name": "test-1",
        "title": "测试1对象测试1对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
      {
        "description": "",
        "id": "test-1-object-test-2-object-field",
        "name": "test2",
        "title": "测试1对象测试2对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
      {
        "description": "",
        "id": "test-1-object-test-3-object-field",
        "name": "test3",
        "title": "测试1对象测试3对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
    ],
    "name": "test-1",
    "title": "测试1对象",
  },
}
`;

exports[`object 2`] = `
{
  "objectInfo": {
    "description": "",
    "fieldInfoList": [
      {
        "description": "",
        "id": "test-1-object-test-1-object-field",
        "name": "test-1",
        "title": "测试1对象测试1对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
      {
        "description": "",
        "id": "test-1-object-test-2-object-field",
        "name": "test2",
        "title": "测试1对象测试2对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
      {
        "description": "",
        "id": "test-1-object-test-3-object-field",
        "name": "test3",
        "title": "测试1对象测试3对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
      {
        "description": "",
        "id": "test-2-object-test-1-object-field",
        "name": "test-1",
        "title": "测试2对象测试1对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
      {
        "description": "",
        "id": "test-2-object-test-4-object-field",
        "name": "test-4",
        "title": "测试2对象测试4对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
      {
        "description": "",
        "id": "test-2-object-test-5-object-field",
        "name": "test-5",
        "title": "测试2对象测试5对象字段",
        "typeInfo": {
          "platformToTypeMap": {
            "COMMON": {
              "max": "10",
              "type": "string",
            },
            "GRAPHQL": undefined,
            "JSON": undefined,
            "MONGOOSE": undefined,
          },
        },
      },
    ],
    "name": "test-2",
    "title": "测试2对象",
  },
}
`;
